--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="MSTest.TestFramework" Version="2.2.8"/>
         <PackageReference Include="coverlet.collector" Version="3.1.2"/>
         <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
