--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="coverlet.collector" Version="3.1.2"/>
         <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="System.Reactive" Version="6.0.1-preview.1" />
         <PackageReference Include="System.Threading.Tasks.Dataflow" Version="9.0.0-preview.2.24128.5" />
     </ItemGroup>
 
