--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,8 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="ShaktiTanwar\Test.txt" />
-      <Content Include="ShaktiTanwar\Test.txt">
+      <Content Include="ShaktiTanwar\2TasksPattern\Test.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
